compiler/testData/cli/jvm/resultInReturnTypeUnsupportedByDefault14.out
compiler/testData/cli/jvm/resultInReturnType.kt:1:5: error: 'kotlin.Result' cannot be used as a return type
fun foo() = Result.success(42)
    ^
COMPILATION_ERROR
